# sudoku-ocr

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: cd.yml  ci.yml
code/: Dockerfile  board.py  image.py  ocr.py  requirements-test.txt  requirements.txt
code/tests/: test_sudoku_ocr.py
scripts/: deploy_package.sh  make_a_release.sh  run_ci.sh  update_requirements.sh  upgrade_requirements.sh
src/sudoku_ocr/: __init__.py  board.py  image.py  image_ocr.py  image_processing.py  logging.py
sudoku_ocr/: __init__.py  board.py  image.py  ocr.py
tests/: test_board.py  test_image.py  test_sudoku_ocr.py
tests/integration/: test_image.py  test_image_ocr.py  test_image_processing.py
tests/unit/: test_dummy.py  test_image.py  test_logging.py
