[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
disallow_untyped_defs = true
follow_imports = "skip"

[tool.setuptools_scm]
write_to = "src/sudoku_ocr/version.py"

[tool.coverage.run]
source = ["sudoku_ocr"]
branch = true

[tool.pydocstyle]
convention = "pep257"
